--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.18",
         "babel-preset-react": "^6.24.1",
         "cross-env": "^5.1",
+        "jss-rtl": "^0.2.3",
         "laravel-mix": "^2.0",
         "markdown-to-jsx": "^6.7.3",
         "react": "^16.5.2",
