--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         }
     },
     "scripts": {
-        "post-install-cmd": [ "php artisan clear-compiled", "php artisan optimize", "chmod -R 777 app/storage"],
+        "post-install-cmd": [ "@php artisan clear-compiled", "@php artisan optimize", "chmod -R 777 app/storage"],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
